fixed footer alignment

--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -1,4 +1,4 @@
-footer {
+footer{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -33,6 +33,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     width: 33%
   }
   .social-links {
